--- a/index.html
+++ b/index.html
@@ -24,16 +24,38 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
-    0.041 ETH 3 days left Creation of Jules Wyvern
+    <main class="card">
+      <img src="images/image-equilibrium.jpg" alt="equilibrium" />
+      <h1>Equilibrium #3429</h1>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+      <div class="stats">
+        <img src="images/icon-ethereum.svg" alt="ethereum-icon" />
+        <span>0.041 ETH</span>
+
+        <img src="images/icon-clock.svg" alt="clock-icon" />
+        <span>3 days left</span>
+      </div>
+
+      <hr />
+
+      <div class="author">
+        <img src="images/image-avatar.png" alt="avatar" />
+        <span>Creation of Jules Wyvern</span>
+      </div>
+    </main>
+
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </footer>
   </body>
 </html>
