css styling and positioning

--- a/index.html
+++ b/index.html
@@ -29,16 +29,25 @@
   </head>
   <body>
     <main class="card">
-      <img src="images/image-equilibrium.jpg" alt="equilibrium" />
-      <h1>Equilibrium #3429</h1>
-      <p>Our Equilibrium collection promotes balance and calm.</p>
+      <div class="header">
+        <img src="images/image-equilibrium.jpg" alt="equilibrium" />
+        <h1>Equilibrium #3429</h1>
+      </div>
+
+      <div class="description">
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+      </div>
 
       <div class="stats">
-        <img src="images/icon-ethereum.svg" alt="ethereum-icon" />
-        <span>0.041 ETH</span>
+        <div class="price">
+          <img src="images/icon-ethereum.svg" alt="ethereum-icon" />
+          <span>0.041 ETH</span>
+        </div>
 
-        <img src="images/icon-clock.svg" alt="clock-icon" />
-        <span>3 days left</span>
+        <div class="time">
+          <img src="images/icon-clock.svg" alt="clock-icon" />
+          <span>3 days left</span>
+        </div>
       </div>
 
       <hr />
