formatting with flexbox

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="author">
         <img src="images/image-avatar.png" alt="avatar" />
-        <span>Creation of Jules Wyvern</span>
+        <span>Creation of <em>Jules Wyvern</em></span>
       </div>
     </main>
 
