first attempt at image hover

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <main class="card">
       <div class="header">
         <img src="images/image-equilibrium.jpg" alt="equilibrium" />
+        <div class="overlay">
+          <img src="images/icon-view.svg" alt="icon-view" />
+        </div>
         <h1>Equilibrium #3429</h1>
       </div>
 
