second attempt at overlay hover

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
   <body>
     <main class="card">
       <div class="header">
-        <img src="images/image-equilibrium.jpg" alt="equilibrium" />
-        <div class="overlay">
-          <img src="images/icon-view.svg" alt="icon-view" />
+        <div class="image">
+          <img src="images/image-equilibrium.jpg" alt="equilibrium" />
+          <div class="overlay">
+            <img src="images/icon-view.svg" alt="icon-view" />
+          </div>
         </div>
         <h1>Equilibrium #3429</h1>
       </div>
